Finished the text box and fixed the alignment

--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,7 @@ li a:hover {
     padding-right: 16px;
     padding-bottom: 14px;
     padding-top: 13px;
+    height: 52;
     text-align: center;
     background: transparent;
     font-size: 16px;
@@ -192,10 +193,14 @@ li a:hover {
 }
 
 .custom-input {
-    display: block;
+    display: none;
+    visibility: hidden;
     text-align: left;
     text-decoration: none;
     color: white; 
+    padding-left: 16px;
+    padding-right: 16px;
+    height: 52;
 }
 
 .custom-input:hover {
@@ -203,6 +208,8 @@ li a:hover {
 }
 
 .custom-input input {
+    position: relative;
+    bottom: 13px;
     border: 2px solid #111;
     font-size: 16px;
     color: white;
